# Design-mode

./: .clang-format  .gitignore  README.md
abstract_factory/: AccessFactory.h  AccessUser.h  SqlserverFactory.h  main.cpp
builder/: Builder.h  ConcreteBuilder1.h
calc/: OperationAdd.h  OperationFactory.h  calc.cpp
composite/: ConcreteCompany.h  main.cpp
decorator/: Person.h  decorator.cpp
hfdp/: CMakeLists.txt  README.md
hfdp/source/01_strategy/: CMakeLists.txt
hfdp/source/01_strategy/inc/: DecoyDuck.h  Duck.h  FlyBehavior.h  FlyNoWay.h  FlyWithWings.h  MallardDuck.h  MuteQuack.h  Quack.h  QuackBehavior.h  RedheadDuck.h  RubberDuck.h  Squeak.h
hfdp/source/01_strategy/src/: SimUDuck.cpp
hfdp/source/02_observer/: CMakeLists.txt
hfdp/source/02_observer/inc/: CurrentConditionsDisplay.h  DisplayElement.h  Observer.h  Subject.h  WeatherData.h
hfdp/source/02_observer/src/: CurrentConditionsDisplay.cpp  WeatherData.cpp  WeatherStation.cpp
hfdp/source/03_decorator/: CMakeLists.txt
hfdp/source/03_decorator/inc/: Beverage.h  CondimentDecorator.h  DarkRoast.h  Decaf.h  Espresso.h  HouseBlend.h  Mocha.h  Soy.h  Whip.h
hfdp/source/03_decorator/src/: StarbuzzCoffee.cpp
hfdp/source/04_factory/: CMakeLists.txt
hfdp/source/04_factory/inc/: ChicagoPizzaStore.h  ChicagoStyleCheesePizza.h  NYPizzaStore.h  NYStyleCheesePizza.h  Pizza.h  PizzaIngredientFactory.h  PizzaStore.h
hfdp/source/04_factory/src/: PizzaStore.cpp
hfdp/source/05_singleton/: CMakeLists.txt
hfdp/source/05_singleton/inc/: ChocolateBoiler.h
hfdp/source/05_singleton/src/: main.cpp
(+68 files in other folders)
